# version-injector-nursery

./: .gitignore  LICENSE  README.rst  inject.py  pyproject.toml  version-injector.toml
.github/workflows/: build-docs.yml  pages.yml  pr-build.yml  pr-preview-build.yml  pr-preview-deploy.yml  pr-previews.yml  pr-upload.yml  publish-docs.yml
.github/workflows/build-docs/: action.yml
doc/: conf.py
doc/_templates/: layout.html  page.html  versions.html
src/: version_injector.py
src/version_injector/: __init__.py  __main__.py
src/version_injector/_templates/: 404.html  extrahead.html  index.html  robots.txt  unlisted-warning.html  vanguard-warning.html  variants-warning.html  version-list.html  versions-warning.html
