[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "version-injector"
dynamic = ["version"]
description = "TODO"
readme = "README.rst"
keywords = ["TODO", "TODO"]
authors = [
  {name = "Matthias Geier", email = "Matthias.Geier@gmail.com"},
]
dependencies = [
  "tomlkit",
]
requires-python = ">= 3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Documentation = "https://mgeier.github.io/version-injector"
Repository = "https://github.com/mgeier/version-injector"
Issues = "https://github.com/mgeier/version-injector/issues"

[tool.setuptools.dynamic]
version = {attr = "version_injector.__version__"}
